fix overflow - section header and added new variable for bg

--- a/css/global.sass
+++ b/css/global.sass
@@ -14,6 +14,12 @@ body
     margin: auto
 
 .section-header 
+    position: relative
+    height: 100vh
+    width: 100%
+    background: $secondary-bg
+    overflow: hidden
+
     .container 
         position: relative
 
