--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,13 @@ body {
   margin: auto;
 }
 
+.section-header {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background: #16161648;
+  overflow: hidden;
+}
 .section-header .container {
   position: relative;
 }
