--- a/css/vars.sass
+++ b/css/vars.sass
@@ -2,7 +2,7 @@
 // -------------------------------------------------- backgrounds -------------------------------------------------- //
 // -------------------------------------------------- backgrounds -------------------------------------------------- //
 $primary-bg: #100b13
-$secondary-bg: #272727
+$secondary-bg: #16161648
 
 // -------------------------------------------------- fonts -------------------------------------------------- //
 // -------------------------------------------------- fonts -------------------------------------------------- //
